# wrk2mid

./: CMakeLists.txt  ChangeLog  events.cpp  events.h  main.cpp  readme.md  sequence.cpp  sequence.h  wrk2mid.appdata.xml  wrk2mid.desktop  wrk2mid.metainfo.xml  wrktest.in
cmake/: DeploymentUtils.cmake  pandoc_manpage.cmake
docs/: CMakeLists.txt  wrk2mid.1  wrk2mid.1.md
